# learn-CUDA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat
1.HelloWorld/: CMakeLists.txt  README.md  array.cu  atomic.cu  block.cu  helloworld.cu  math.cu  memory.cu  ndarray.cu  stencil.cu  sugar.cu  thread.cu  thrust.cu
1.HelloWorld/include/: CudaAllocator.h
1.hello world/: helloworld.cu
2.Thread/: CMakeLists.txt  thread.cu
resource/HIT_CUDA/: Lec5CUDAProfiling.rar
